# AugmentedRealityFromScratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindIrrlicht.cmake
headers/: ARTag.hpp  Camera.hpp  CommandLineParser.cpp  CommandLineParser.hpp  IrrlichtRenderer.hpp  OBJLoader.h  OBJLoader.hpp  Object.hpp  OpenGLRenderer.hpp  Renderer.hpp  Scene.hpp  Segmentation.hpp  TagDetection.hpp  Tracking.hpp  Utils.hpp  Video.hpp  View.inl  exceptions.hpp
report/: main.tex
report/tex_files/: ameliorations.tex  conclusion.tex  detection.tex  implementation.tex  introduction.tex  scene.tex
resources/: cube.mtl  deer.mtl  deer.scene  example.scene  low_poly_fox.mtl  monkey.mtl  msi.cam  oneplus.cam  webcam.cam
src/: ARTag.cpp  Camera.cpp  CommandLineParser.cpp  IrrlichtRenderer.cpp  OBJLoader.cpp  Object.cpp  OpenGLRenderer.cpp  Renderer.cpp  Scene.cpp  Segmentation.cpp  TagDetection.cpp  Tracking.cpp  Utils.cpp  Video.cpp  main.cpp
